--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>i</title>
+    <title>TODK</title>
     <meta charset="'utf-8">
 </head>
 
@@ -24,10 +24,11 @@
     <br>사실 예전부터 좋아하는 사람한테 이런거 만들어주고싶었는데,,,그게 너라서 정말 기뻐!
     <br><br>
     <img src="letter.jpg" width="70%">
-    <br><br> 예전에 너가 써줬던 편지 기억해? 그때 나를 보면서 나무를, 초록색들을 보는 기분을 알게됐다고 했잖아. 그 말이 너무 고맙고 좋았어. 하루종일 곱씹으면서 웃었어. 그리고, 나도 언제나 같은 마음이야! 이제 에쁜 것들을 보면 너가 가장 먼저 생각나.
+    <br><br> 예전에 너가 써줬던 편지 기억해? 그때 나를 보면서 나무를, 초록색들을 보는 기분을 알게됐다고 했잖아. 그 말이 너무 고맙고 좋았어.
+    <br>하루종일 곱씹으면서 웃었어. 그리고, 나도 언제나 같은 마음이야! 이제 에쁜 것들을 보면 너가 가장 먼저 생각나.
     <br><br>
     <img src="rose.jpg" width="70%">
-    <br><br> 그리고 너랑 지금까지 보낸 것보다 앞으로 같이 보낼 여름이 더 많다는 게 너무 좋아...
+    <br><br> 그리고 지금까지 너랑 보낸 여름보다 앞으로 같이 보낼 여름이 더 많다는 게 너무 좋아...
 <p style="margin-top:30px;">
     
 </i></p>
