--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
   <h1><a href="index.html">도경이에게</a></h1>
   <ol>
-    <li><a href="1.html">i</a></li>
-    <li><a href="2.html">like</a></li>
-    <li><a href="3.html">yooooou</a></li>
+    <li><a href="1.html">6月5日</a></li>
+    <li><a href="2.html">12月19日</a></li>
   </ol>
   <img src="cat.JPG" width="50%">
 <img src="popo.jpg" width="75%">
 </body>
+
 </html>
