--- a/06052.html
+++ b/06052.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1><a href="index.html">도경이에게</a></h1>
+    <h1><a href="index.html">6月5日</a></h1>
     <ol>
         <li><a href="1.html">i</a></li>
         <li><a href="2.html">like</a></li>
@@ -25,3 +25,4 @@
 </i></p>
 </body>
 </html>
+
