--- a/06053.html
+++ b/06053.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">도경이에게</a></h1>
+  <h1><a href="index.html">6月5日</a></h1>
   <ol>
     <li><a href="1.html">i</a></li>
     <li><a href="2.html">like</a></li>
@@ -20,3 +20,4 @@
 </i></p>
 </body>
 </html>
+
