--- a/06051.html
+++ b/06051.html
@@ -2,17 +2,16 @@
 <html>
 <head>
     <title>TODK</title>
-    <meta charset="'utf-8">
+    <meta charset="utf-8">
 </head>
 
 <body>
-    <h1><a href="index.html">6月5日</a></h1>
-    <ol>
-        <li><a href="06051.html" target="_blank">i</a></li>
-        <li><a href="06052.html">like</a></li>
-        <li><a href="06053.html">yooooou</a></li>
-    </ol>
-
+<h1><a href="../index.html">6月5日</a></h1>
+<ol>
+  <li><a href="06051.html">i</a></li>
+  <li><a href="06052.html">like</a></li>
+  <li><a href="06053.html">yooooou</a></li>
+</ol>
 <h2>i</h2>
 <p><i>
     이 노래 들으면서 읽으면 더 좋을거야..
@@ -34,5 +33,6 @@
 </i></p>
 </body>
 </html>
+
 
 
