--- a/06052.html
+++ b/06052.html
@@ -2,17 +2,17 @@
 <html>
 <head>
     <title>TODK</title>
-    <meta charset="'utf-8">
+    <meta charset="utf-8">
 </head>
 
 <body>
-    <h1><a href="index.html">6月5日</a></h1>
-    <ol>
-        <li><a href="06051.html">i</a></li>
-        <li><a href="06052.html">like</a></li>
-        <li><a href="06053.html">yooooou</a></li>
-    </ol>
-
+<h1><a href="../index.html">6月5日</a></h1>
+<ol>
+  <li><a href="06051.html">i</a></li>
+  <li><a href="06052.html">like</a></li>
+  <li><a href="06053.html">yooooou</a></li>
+</ol>
+    
 <h2>like</h2>
 <p><i>
     <img src="clover.jpg" width="50%">
@@ -25,5 +25,6 @@
 </i></p>
 </body>
 </html>
+
 
 
