--- a/06053.html
+++ b/06053.html
@@ -1,16 +1,17 @@
 <!doctype html>
 <html>
 <head>
-  <title>TODK</title>
-  <meta charset="utf-8">
+    <title>TODK</title>
+    <meta charset="utf-8">
 </head>
+
 <body>
-  <h1><a href="index.html">6月5日</a></h1>
-  <ol>
-    <li><a href="06051.html">i</a></li>
-    <li><a href="06052.html">like</a></li>
-    <li><a href="06053.html">yooooou</a></li>
-  </ol>
+<h1><a href="../index.html">6月5日</a></h1>
+<ol>
+  <li><a href="06051.html">i</a></li>
+  <li><a href="06052.html">like</a></li>
+  <li><a href="06053.html">yooooou</a></li>
+</ol>
   <h2>yooooou</h2>
   <p>
    <img src="glass.jpg" width="80">
@@ -20,5 +21,6 @@
 </i></p>
 </body>
 </html>
+
 
 
