--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 <body>
   <h1><a href="index.html">도경이에게</a></h1>
   <ol>
-  <li><a href="6_5/index.html">6月5日</a></li>
-  <li><a href="2.html">12月19日</a></li>
+  <li><a href="0605/index.html">6月5日</a></li>
+  <li><a href="1219/index.html">12月19日</a></li>
   </ol>
   <img src="cat.JPG" width="50%">
 <img src="popo.jpg" width="75%">
 </body>
 
 </html>
+
 
