--- a/0605index.html
+++ b/0605index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="0605index.html">6月5日</a></h1>
+  <h1><a href="index.html">도경에게</a></h1>
 <ol>
   <li><a href="06051.html">i</a></li>
   <li><a href="06052.html">like</a></li>
