--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">도경이에게</a></h1>
+  
+  <h1><a href="index.html">도경에게</a></h1>
+  
   <ol>
   <li><a href="0605index.html">6月5日</a></li>
   <li><a href="1219index.html">12月19日</a></li>
   </ol>
+  
   <img src="cat.JPG" width="50%">
-<img src="popo.jpg" width="75%">
+  <img src="popo.jpg" width="75%">
+  
 </body>
-
 </html>
+
 
 
 
