--- a/12192.html
+++ b/12192.html
@@ -1,1 +1,31 @@
+<!doctype html>
+<html>
+<head>
+    <title>TODK</title>
+    <meta charset="utf-8">
+</head>
+
+<body>
+<h1><a href="1219index.html">12月19日</a></h1>
+<ol>
+  <li><a href="12191.html">i</a></li>
+  <li><a href="12192.html">like</a></li>
+</ol>
+    
+<h2>like</h2>
+<p><i>
+    <img src="clover.jpg" width="50%">
+    <br>너에게 클로버가 없어도 항상 행운이 넘쳤으면 좋겠어.
+    <br>그치만 클로버를 찾으면 제일 먼저 너한테 줄거야!
+    <br>
+    <img src="flower.jpg" width="50%">
+    <br>
+    많이 좋아해!
+</i></p>
+</body>
+</html>
+
+
+
+
 
