--- a/06051.html
+++ b/06051.html
@@ -6,8 +6,7 @@
 </head>
 
 <body>
-    
-    <h1><a href="0605index.html">6月5日</a></h1>
+    <h1><a href="index.html">6月5日</a></h1>
     
 <ol>
   <li><a href="06051.html">i</a></li>
@@ -42,6 +41,7 @@
 </i></p>
 </body>
 </html>
+
 
 
 
