--- a/06053.html
+++ b/06053.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1><a href="0605index.html">6月5日</a></h1>
+<h1><a href="index.html">6月5日</a></h1>
 <ol>
   <li><a href="06051.html">i</a></li>
   <li><a href="06052.html">like</a></li>
@@ -21,6 +21,7 @@
 </i></p>
 </body>
 </html>
+
 
 
 
