--- a/12191.html
+++ b/12191.html
@@ -7,7 +7,7 @@
 
 <body>
     
-    <h1><a href="1219index.html">12月19日</a></h1>
+<h1><a href="index.html">12月19日</a></h1>
     
 <ol>
   <li><a href="12191.html">merry</a></li>
