--- a/12192.html
+++ b/12192.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1><a href="1219index.html">12月19日</a></h1>
+<h1><a href="index.html">12月19日</a></h1>
 <ol>
   <li><a href="12191.html">i</a></li>
   <li><a href="12192.html">like</a></li>
