--- a/12192.html
+++ b/12192.html
@@ -15,17 +15,16 @@
 <h2>like</h2>
 <p><i>
     <img src="clover.jpg" width="50%">
-    <br>너에게 클로버가 없어도 항상 행운이 넘쳤으면 좋겠어.
-    <br>그치만 클로버를 찾으면 제일 먼저 너한테 줄거야!
+    <br>그거 알아? 낭만의 낭이랑 낭비의 낭은 같은 한자를 쓴대!
+    <br>그런 지구에서 따뜻한 것들을 보면서 웃는 너가 좋♥아♥
+    <br>예전에 너가 학교 앞 상가에 도연이랑 나갔다가 왁자지껄하고 사람사는냄새나서 좋았다고... 말해준 게 너무 따뜻..했구
     <br>
-    <img src="flower.jpg" width="50%">
+    <img src="snow.jpg" width="50%">
     <br>
-    많이 좋아해!
+    <br>첫눈올때도 너 만나서 좋았어. 눈을 그렇게 신나게 맞았던 건 정말 오랜만이었어! 치마입었었는데도 하나도 안 추웠고
+    <br>
 </i></p>
 </body>
 </html>
-
-
-
 
 
