--- a/12192.html
+++ b/12192.html
@@ -14,7 +14,7 @@
     
 <h2>like</h2>
 <p><i>
-    <img src="clover.jpg" width="50%">
+    <img src="winter.jpg" width="50%">
     <br>그거 알아? 낭만의 낭이랑 낭비의 낭은 같은 한자를 쓴대!
     <br>그런 지구에서 따뜻한 것들을 보면서 웃는 너가 좋♥아♥
     <br>예전에 너가 학교 앞 상가에 도연이랑 나갔다가 왁자지껄하고 사람사는냄새나서 좋았다고... 말해준 게 너무 따뜻..했구
