--- a/12192.html
+++ b/12192.html
@@ -16,12 +16,15 @@
 <p><i>
     <img src="winter.jpg" width="50%">
     <br>그거 알아? 낭만의 낭이랑 낭비의 낭은 같은 한자를 쓴대!
-    <br>그런 지구에서 따뜻한 것들을 보면서 웃는 너가 좋♥아♥
+    <br>낭만을 낭비라고 생각하는 사람들이 더 많을 수도 있는 지구에서 따뜻한 것들을 보면서 웃는 너가 좋♥아♥
     <br>예전에 너가 학교 앞 상가에 도연이랑 나갔다가 왁자지껄하고 사람사는냄새나서 좋았다고... 말해준 게 너무 따뜻..했구
+    <br>경주에서 비옷없이 탄 썸머..어쩌고..놀이 기구가 진짜 재밌었고!
+    <img src="icecream.jpg" width="50%">
     <br>
     <img src="snow.jpg" width="50%">
-    <br>
     <br>첫눈올때도 너 만나서 좋았어. 눈을 그렇게 신나게 맞았던 건 정말 오랜만이었어! 치마입었었는데도 하나도 안 추웠고
+    <br>
+    <br>물만난물고기를 읽고! 너가 편지로 새로운 세상을 보게 해 주어서 고마워라는 말을 한 적 있어
     <br>
 </i></p>
 </body>
