--- a/12192.html
+++ b/12192.html
@@ -8,8 +8,8 @@
 <body>
 <h1><a href="index.html">12月19日</a></h1>
 <ol>
-  <li><a href="12191.html">i</a></li>
-  <li><a href="12192.html">like</a></li>
+  <li><a href="12191.html">hi2025</a></li>
+  <li><a href="12192.html">bye고3</a></li>
 </ol>
     
 <h2>like</h2>
