--- a/1219index.html
+++ b/1219index.html
@@ -9,8 +9,8 @@
 <h1><a href="index.html">12月19日</a></h1>
   
 <ol>
-  <li><a href="12191.html">merry</a></li>
-  <li><a href="12192.html">christmas</a></li>
+  <li><a href="12191.html">bye고3</a></li>
+  <li><a href="12192.html">hi2025</a></li>
 </ol>
   
 </body>
