--- a/12192.html
+++ b/12192.html
@@ -16,8 +16,11 @@
 <p><i>
     <img src="winter.jpg" width="50%">
     <br>그거 알아? 낭만의 낭이랑 낭비의 낭은 같은 한자를 쓴대!
-    <br>낭만을 낭비라고 생각하는 사람들이 더 많을 수도 있는 지구에서 따뜻한 것들을 보면서 웃는 너가 좋♥아♥
+    <br>그런 지구에서 따뜻한 것들을 보면서 웃는 너가 좋♥아♥
+    <br>
+    <br>
     <br>예전에 너가 학교 앞 상가에 도연이랑 나갔다와서 왁자지껄하고 사람사는냄새나서 좋았다고... 말해준 게 너무 따뜻..했구
+    <br>
     <br>경주에서 비옷없이 탄 썸머린스플래쉬!..놀이 기구가 진짜 재밌었고!
     <br>
     <img src="icecream.jpg" width="50%">
