--- a/1219index.html
+++ b/1219index.html
@@ -12,6 +12,6 @@
   <li><a href="12191.html">bye고3</a></li>
   <li><a href="12192.html">hi2025</a></li>
 </ol>
-  
+<img src="red.jpg" width="70%">  
 </body>
 </html>
