--- a/12191.html
+++ b/12191.html
@@ -21,8 +21,7 @@
     
     <br><br>
     오늘은 너와 야자...시간에 반에서 놀다가 틱틱택택우...샘께 걸린 날이고!
-    <br>너 가고 나서 생각했는데 이럴 때는 항상 너가 우리 반에 와줬더라고
-    <br>고마웠어! 고마워!
+    <br>너 가고 나서 생각했는데 이럴 때는 항상 너가 우리 반에 와줬더라고..고마웠었어! 고마워!
     <br>너가 없는데...이게 생각나서! 하다보니까 야2에도 너랑 있는 기분이 들었고
     <br><br>
     
