--- a/12192.html
+++ b/12192.html
@@ -15,7 +15,7 @@
 <h2>hi2025</h2>
 <p><i>
     <img src="winter.jpg" width="50%">
-    <br>그거 알아? 낭만의 낭이랑 낭비의 낭은 같은 한자를 쓴대!
+    <br>그거 알아? 낭만의 낭이랑 낭비의 낭은 같은 한자(浪)를 쓴대!
     <br>그런 지구에서 따뜻한 것들을 보면서 웃는 너가 좋♥아♥
     <br>
     <br>
