--- a/12192.html
+++ b/12192.html
@@ -28,7 +28,7 @@
     <br>
     <img src="snow.jpg" width="50%">
     <br>
-    <br>물만난물고기를 읽고! 너가 편지로 새로운 세상을 보게 해 주어서 고맙다고 한 적 있어.
+    <br>물만난물고기를 읽고! 너가 쪽지에 새로운 세상을 보게 해 주어서 고맙다고 써줬었어.
     <br>그때는 말 못했는데.. 나도 너 덕분에 더 커다란 세상을 알게됐고!
     <br>그거 덕분에 이것저것 보고!해보고!할 수 있어서 올 한해가 너무 즐거웠어~
     <br>너한테도! 이십오가 기분 좋은 일 년으로 기억됐으면 좋겠고...
