--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <h1><a href="index.html">도경에게</a></h1>
   
   <ol>
-  <li><a href="0605index.html">6月5日</a></li>
-  <li><a href="1219index.html">12月19日</a></li>
+  <li><a href="0605index.html">2025年6月5日</a></li>
+  <li><a href="1219index.html">2025年12月19日</a></li>
   </ol>
   
   <img src="cat.JPG" width="50%">
@@ -18,6 +18,7 @@
   
 </body>
 </html>
+
 
 
 
