--- a/1219index.html
+++ b/1219index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   
-<h1><a href="index.html">12月19日</a></h1>
+<h1><a href="index.html">2025年12月19日</a></h1>
   
 <ol>
   <li><a href="12191.html">bye고3</a></li>
