--- a/12191.html
+++ b/12191.html
@@ -25,9 +25,10 @@
     <br>너가 없는데...이게 생각나서! 하다보니까 야2에도 너랑 있는 기분이 들었어
     <br><br>
     
-    
-    <br><br> 
     <br>연말결산 겸 일년을 생각해봤는데...올 한해는 정말 모든 달에!모든 날에! 너가 있었어.
+    <br>
+    <img src="year.jpg" width="40%">
+    <br>
     <br>너가 나한테 너무너무 소중한! 친구라서 잘보이고싶고...웃기고 싶고...나랑 있을 때 너가 즐거웠으면 좋겠구..조금은 편했으면 좋겠고!
     <br>그렇게 널 보면 너무 신나서 이것저것 다 얘기하게 되고...그래서 비밀도 서프라이즈도! 재미없어지기도 햇는데...그래도 너가 좋아!
     <br>너도 나만큼 우리가 같이 있었던 시간이 행복하게 남았기를 바라보면서...
