--- a/12191.html
+++ b/12191.html
@@ -34,7 +34,7 @@
     <br>너도 나만큼 우리가 같이 있었던 시간이 행복하게 남았기를 바라보면서...
     <br><br>
     <img src="lee.jpg" width="70%">
-    
+    <br> lee...입은 나! 여서 넣어본 사진이구..
     <br><br> 아! 다음생에는 정말로 너 딸로 태어날...까?
 <p style="margin-top:30px;">
     
