--- a/12191.html
+++ b/12191.html
@@ -17,7 +17,7 @@
 <h2>bye고3</h2>
     
 <p><i>
-    <a href="https://youtu.be/COn1D6bR8Mw?si=mqf4Dfn9iP8B4aIx" target="'_blank" title="❤">❤</a>
+    <a href="https://youtu.be/WdSlQgSfGD8?si=Pn4iOLByKqnnpSYX" target="'_blank" title="❤">❤</a>
     
     <br><br>
     오늘은 너와 야자...시간에 반에서 놀다가 틱틱택택우...샘께 걸린 날이고!
