--- a/12191.html
+++ b/12191.html
@@ -18,6 +18,8 @@
     
 <p><i>
     <a href="https://youtu.be/WdSlQgSfGD8?si=Pn4iOLByKqnnpSYX" target="'_blank" title="❈">❈</a>
+    내가 요즘 좋아하는 음성녹음!이라는 밴드의 노래고...하루에도 열 번씩 듣는데 맨 처음 가사를 듣자마자 너가 생각났고...
+    <br>고로 하루에도 열 번씩 네 생각을 한다!
     
     <br><br>
     오늘은 너와 야자...시간에 반에서 놀다가 틱틱택택우...샘께 걸린 날이고!
