--- a/12191.html
+++ b/12191.html
@@ -1,4 +1,4 @@
-☀︎<!doctype html>
+<!doctype html>
 <html>
 <head>
     <title>TODK</title>
@@ -17,7 +17,7 @@
 <h2>bye고3</h2>
     
 <p><i>
-    내가 요즘 좋아하는 음성녹음!이라는 밴드의 노래야. 하루에도 열 번씩 듣는데 맨 처음에 가사를 듣자마자 너가 생각났고...
+    요즘 내가 좋아하는 음성녹음!이라는 밴드의 노래야. 하루에도 열 번씩 듣는데 맨 처음에 가사를 듣자마자 너(☀︎)가 생각났고...
     <br>고로 하루에도 열 번씩 네 생각을 한다!
     <a href="https://youtu.be/WdSlQgSfGD8?si=Pn4iOLByKqnnpSYX" target="'_blank" title="☀︎">☀︎</a>
     
