--- a/12191.html
+++ b/12191.html
@@ -36,8 +36,8 @@
     <br>너도 나만큼 우리가 같이 있었던 시간이 행복하게 남았기를 바라보면서...편지를 쓰고잇어
     <br><br>
     <img src="lee.jpg" width="30%">
-    <br> lee...입은 나! 여서 넣어본 사진이구..
-    <br><br> 아! 다음생에는 정말로 너 딸로 태어날...까?
+    <br> 이것은 lee 입은 나!이고 
+    <br><br> 다음생에는 정말로 너 딸로 태어나구싶다는 생각을 햇다!
 <p style="margin-top:30px;">
     
 </i></p>
