--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <ol>
   <li><a href="0605index.html">2025年6月5日</a></li>
   <li><a href="1219index.html">2025年12月19日</a></li>
+  <li><a href="0131index.html">2026年1月31日</a></li>
   </ol>
   
   <img src="cat.JPG" width="50%">
@@ -18,6 +19,7 @@
   
 </body>
 </html>
+
 
 
 
